--- a/pm/app/templates/Auth/default.latte
+++ b/pm/app/templates/Auth/default.latte
@@ -4,6 +4,8 @@
 
 <h2 n:block="title">Autentizace</h2>
 
+<p>Přihlaste se pomocí uživatelského jména a k němu náležícího hesla pro tento server. Nebo alternativně pomocí OpenID protokolu.</p>
+
 {control authForm}
 <a n:href="auth:openid">Přihlásit se pomocí OpenID</a>
 
