--- a/pm/app/templates/Auth/openid.latte
+++ b/pm/app/templates/Auth/openid.latte
@@ -4,5 +4,6 @@
 
 <h2 n:block="title">OpenID autentizace</h2>
 
+<p>Přihlšte se zadáním vašené openID v kompletním tvaru (např. jmeno.mojeid.cz). První přihlášení funguje i jako registrace, můžete volitelně předat jméno a email, pokud je nepředáte zeptá se vás tento server na ně později. Nebo <a n:href="auth:">přihlásit se na tento web standardním způsobem</a>.</p>
+
 {control openIdAuthForm}
-<a n:href="auth:">Přihlásit se na tento web standardním způsobem</a>
