--- a/pm/app/templates/Multimedia/add.latte
+++ b/pm/app/templates/Multimedia/add.latte
@@ -2,6 +2,6 @@
 
 <h2 n:block="title">Nahrání nového obrázku</h2>
 
-{control addImage}
+<p>Zvolíte jeden soubor s obrázkem, který chcete nahrát na web. Obrázek bude uložen (do k tomu určené veřejně přístupné složky) pod stejným jménem jako má vámi zvolený soubor. Pokud už pod stejným jeménem nějaký soubor uložen máme, nový se před uložením přejmenuje (přidáním čísla na konec jména) tak, aby jména nekolidovaly. Ve výběrovém seznamu zvolíte jakou chcete vytvořit miniaturu.</p>
 
-<p class="info">Pro přidávání fotografií do fotogalerie, použíjte k tomu určenou sekci. Tato sekce slouží k nahrání obrázků mimo fotogalerii.</p>
+{control addImage}
