--- a/pm/app/templates/Multimedia/default.latte
+++ b/pm/app/templates/Multimedia/default.latte
@@ -2,13 +2,21 @@
 
 <h2 n:block="title">Přehled obrázků</h2>
 
-<ul n:inner-foreach="$multimedia as $picture">
+<p>Tady je zobrazen přehled obrázků nalezených v k tomu určeném adresáři. Všechny tyto obrázky jsou veřejně přístupné každému, kdo zná jejich adresu. Pokud některý obrázek uložen společně se svojí miniaturou je zobrazena jeho miniatura a na originální rozměr můžete přejít odkazem, který je u ní uveden.</p>
+
+<ul n:inner-foreach="$multimedia as $picture" class="block">
 	<li>
-		<img src="{$baseUri}/images/{$picture->name}" alt="{$picture->name}"><br>
-		adresa miniatury: <code>{$baseUri}/images/{$picture->name}</code><br>
-		adresa plné velikosti: <code>{$baseUri}/images/full/{$picture->name}</code><br>
-		velikost souboru miniatury: {$picture->size|bytes}<br>
+		{if file_exists('images/mini/'.$picture->name)}
+			<img src="{$baseUri}/images/mini/{$picture->name}" alt="{$picture->name}"><br>
+			<em>(zobrazena mimiatura)</em><br>
+			adresa miniatury: <code>{$baseUri}/images/mini/{$picture->name}</code><br>
+		{else}
+			<img src="{$baseUri}/images/{$picture->name}" alt="{$picture->name}"><br>
+			<em>(zobrazena originální velikost)</em><br>
+		{/if}
+		adresa obrázku: <code>{$baseUri}/images/{$picture->name}</code><br>
+		velikost souboru: {$picture->size|bytes}<br>
 		datum a čas vytvoření: {$picture->time|date}<br>
-		<a n:href="delete $picture->name">smazat</a>{* // @todo : provést js dotaz 'opravdu...' *}
+		<a n:href="delete $picture->name">smazat</a>{* @todo : provést js dotaz 'opravdu...' *}
 	</li>
 </ul>
