--- a/pm/app/templates/News/add.latte
+++ b/pm/app/templates/News/add.latte
@@ -2,6 +2,8 @@
 
 <h2 n:block="title">Přidání novinky</h2>
 
+<p>Pokud chcete aby právě přidávaná novinka obsahovala i obrázky, musíte je napřed nahrát v <a n:href="multimedia:add">k tomu určené sekci multimedia</a>.</p>
+
 {control newsForm}
 
 {snippet content section}
@@ -11,5 +13,3 @@
 		<p>Zde se zobrazí náhled právě přidávané novinky</p>
 	{/ifset}
 {/snippet}
-
-<p class="info">Pokud chcete aby právě přidávaná novinka obsahovala i obrázky, musíte je napřed nahrát v <a n:href="multimedia:add">k tomu určené sekci multimedia</a></p>
