--- a/pm/app/templates/Register/default.latte
+++ b/pm/app/templates/Register/default.latte
@@ -4,6 +4,6 @@
 
 <h2 n:block="title">Registrace uživatele</h2>
 
-{control registerForm}
+<p>Registrovat se můžete také <a href="{plink Auth:openid}">přihlášením k vašemu openID</a> účtu.</p>
 
-<p class="info">Registrovat se můžete také <a href="{plink Auth:openid}">přihlášením k vašemu openID</a> účtu.</p>
+{control registerForm}
