--- a/pm/app/components/Menu/menu.latte
+++ b/pm/app/components/Menu/menu.latte
@@ -1,6 +1,11 @@
 {block content}
 
 <ul n:inner-foreach="$items as $item">
-<li n:ifset="$item->link"><a href="{plink 'default:'}#{$item->hash}">{$item->title}</a></li>
-{*<li n:ifset="$item->link"><a href="{if $presenter->getName() != 'Default'}<?php echo $presenter->link(Nette\Templates\TemplateHelpers::escapeHtml($item->link).':'); ?>{/if}#{$item->hash}">{$item->title}</a></li>*}
+	<li n:ifset="$item->link"><a href="{plink 'default:'}#{$item->hash}" data-rel-bookmark="<?php
+		if($item->p_type == 0) {
+			echo $presenter->link('content:view', Nette\Templates\TemplateHelpers::escapeHtml($item->hash));
+		} else {
+			echo $presenter->link(Nette\Templates\TemplateHelpers::escapeHtml($item->link).':');
+		}
+	?>">{$item->title}</a></li>
 </ul>
