--- a/pm/app/templates/News/default.latte
+++ b/pm/app/templates/News/default.latte
@@ -3,11 +3,11 @@
 <h2 n:block="title">Novinky</h2>
 
 {ifset $items}
-	<ul n:inner-foreach="$items as $item" id="lol" class="list">
+	<ul n:inner-foreach="$items as $item" class="list">
 		<li>
 			<h3>{$item->title}</h3>
 			<small>Přidáno {$item->date|date}</small>
-			<p>{!$item->content|texy|truncate:300}</p>
+			{!$item->content|texy|truncate:300}
 			<a href="{plink news:detail $item->id}">připsat komentář…</a>{* protože se tato šablona používá i v komponentě není možné použít jednoduché n:href="detail $item->id" protože toto vytvoří normální link, a pro komponentu je třeba plink*}
 			{if $user->isInRole('administrator')}{* v budoucnu údajně bude pro ověření stačit n:if-allowed *}
 				| <a href="{plink news:edit $item->id}">upravit</a>
