--- a/pm/app/templates/@layout.latte
+++ b/pm/app/templates/@layout.latte
@@ -7,12 +7,15 @@
 		<meta n:ifset="$robots" name="robots" content="{$robots}">
 		<meta n:ifset="$settings->description" name="description" content="{$settings->description}">
 		<link rel="profile" href="http://purl.org/uF/2008/03/">{* profile="http://purl.org/uF/2008/03/" značí specifikaci hodně druhů mikroformátů (včetně hCard), které nejsou ve stádiu návrhu, což je třeba hAtom: http://purl.org/uF/hAtom/0.1/ *}
-		<link rel="profile" href="http://purl.org/uF/hAtom/0.1/">{* chtěli po mě vložit tohle do hlavičky <head profile="něco"> ale na mě si nepříjdou *}
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">{* ikonka mojeho webu *}
+		<link rel="profile" href="http://purl.org/uF/hAtom/0.1/">
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">{* ikonka webu *}
 		<link rel="home" href="{$basePath}" title="úvodní stránka">{* odkaz na homepage *}
 		<!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-		<link n:if="$presenter->getParam(Nette\Application\Presenter::FLASH_KEY)" rel="canonical" href="{link this, Nette\Application\Presenter::FLASH_KEY => NULL}">{* v případě existence flash identifikátoru v uri (?_fid=...) přidá odkaz na kanonickou adresu *}
-		{control css 'screen.less'}
+		<link n:if="$presenter->getParam(Nette\Application\Presenter::FLASH_KEY)" rel="canonical" href="{link this, Nette\Application\Presenter::FLASH_KEY => NULL}">{* v případě existence flash identifikátoru v uri (_fid=XXXX) přidá odkaz na kanonickou adresu *}
+		{if $settings->style != '0'}
+			{var $css = array('null', 'screen.less', 'pokus.less')}
+			{control css $css[$settings->style]}
+		{/if}
 		<title>{block #title|striptags|trim}{/block} | {$settings->title}</title>
 		{* @todo: vložit google analytics sem *}
 	</head>
@@ -26,42 +29,46 @@
 		<hr id="bg">
 
 		<section>
-		<nav id="menu"><strong class="hide">menu:</strong>{control menu}</nav>
+			<nav id="menu"><strong class="hide">menu:</strong>{control menu}</nav>
+			<hr>
 			{include #content}
 		</section>
 
 		<hr class="show">
 
 		<aside>
-			<p>
-			{snippet flashes span}
-				<span n:foreach="$flashes as $flash" class="flash {$flash->type}" onclick="this.className='hide'">{$flash->message}</span><br>
+			{snippet flashes div}
+				<p n:foreach="$flashes as $flash" class="flash {$flash->type}" onclick="this.className='hide'">{$flash->message}</p>
 			{/snippet}
-			<span n:if="$settings->important">
+			<p n:if="$settings->important">
 				<strong>{$settings->important_title}</strong>
 				<br>
 				{$settings->important}
-				<br><br>
-			</span>
-			<span n:if="$user->loggedIn">
+				<br>
+			</p>
+			<p n:if="$user->loggedIn">
 				<strong>možnosti úprav</strong><br>
 				<a n:href="menu:">upravit menu</a><br>
 				<a n:href="news:add">napsat novinku</a><br>
-				<a n:href="content:">upravit obsah obsahových sekcí</a><br>
+				<a n:href="content:edit">upravit obsah obsahových sekcí</a><br>
 				<a n:href="contact:edit">upravit kontakt</a><br>
 				<a n:href="settings:">upravit nastavení webu</a><br>
-			</span>
 			</p>
 		</aside>
 
 		<hr>
 
 		<footer>
-			<p>patička | <a href="https://github.com/iiic/pm-studio">fork me on github</a> | multihosting <a href="http://ovh.cz">OVH</a></p>
+			<p>vzhled <a n:href="switchSkin! 0">bez css</a>, <a n:href="switchSkin! 1">black</a> , <a n:href="switchSkin! 2">pokus</a> | <a href="https://github.com/iiic/pm-studio">fork me on github</a> | multihosting <a href="http://ovh.cz">OVH</a></p>
 		</footer>
 
 		{control packedJs 'jquery.js', 'jquery.ajaxform.js', 'jquery.nette.js', 'netteForms.js', 'my.scripts.js'}
 			<script>
+				{if $settings->default_presenter != '0' && $presenter->getName() == 'Default'}
+					if(!location.hash) {
+						window.location.replace("#{!$settings->default_presenter}");
+					}
+				{/if}
 				{ifset $_GET['lol']}
 					// pěkná animace posunu pozadí objektu, ale náročná jak sviňa,
 					//lepší by to teoreticky mělo být na Win7 s některým prohlížečem,
@@ -86,7 +93,7 @@
 					//Calls the scrolling function repeatedly
 					var init = setInterval("scrollBg()", scrollSpeed);
 				{/ifset}
-				if($.browser.msie) {
+				if( ($.browser.msie) && (parseInt($.browser.version, 10) > 7) ) {
 					el = document.getElementsByTagName('ul')[0].children;
 					for(var i = 0; i < el.length; i++) {
 						el[i].lastChild.href = el[i].lastChild.getAttribute('data-rel-bookmark');
